--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 </head>
 
 <body>
+  <nav class="navMenu">
+    <a href="#">Home</a>
+    <a href="#">Blog</a>
+    <a href="#">About</a>
+    <a href="#">Contact</a>
+    <div class="dot"></div>
+  </nav>
   <img src="market_cycle.png" alt="">
   <h1>Required Market Cap for your coin to reach your desired price.</h1>
   <script type="text/javascript" src="script.js">
