--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 </head>
 
 <body>
-  <nav class="navMenu">
-    <a href="#">Home</a>
-    <a href="#">Blog</a>
-    <a href="#">About</a>
-    <a href="#">Contact</a>
-    <div class="dot"></div>
-  </nav>
+  <ul>
+    <li><a href="#" data-title="home">Home</a></li>
+    <li><a href="#" data-title="About">About</a></li>
+    <li><a href="#" data-title="Blog">Blog</a></li>
+    <li><a href="#" data-title="Contact">Contact</a></li>
+  </ul>
   <img src="market_cycle.png" alt="">
   <h1>Required Market Cap for your coin to reach your desired price.</h1>
   <script type="text/javascript" src="script.js">
