--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div>
       <p class="final text_market">Required Market Cap: </p>
-      <p id="finalMarket" class="final result_final"> </p><!-- result will be here -->
+      <p id="finalMarket" class="final final_result"> </p><!-- result will be here -->
     </div>
   </form>
 <footer class="footer">
