footer fix and temp form background removed

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       <p id="finalMarket" class="final final_result"> </p><!-- result will be here -->
     </div>
   </form>
-<!-- <footer class="footer">
+<footer class="footer">
   <p>© 2013 Florin Bizgan. </p>
   <p>All rights reserved. </p>
-</footer> -->
+</footer>
 
 </body>
 
