--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <li><a href="#" data-title="Blog">Blog</a></li>
     <li><a href="#" data-title="Contact">Contact</a></li>
   </ul>
-  <img src="market_cycle.png" alt="">
+<!--   <img src="market_cycle.png" alt=""> -->
   <h1>Required Market Cap for your coin to reach your desired price.</h1>
   <script type="text/javascript" src="script.js">
   </script>
