--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="design.css">
+  <title>Document</title>
 </head>
+
 <body>
-    
+  <ul>
+    <li><a href="#" data-title="home">Home</a></li>
+    <li><a href="about.html" data-title="About">About</a></li>
+    <li><a href="blog.html" data-title="Blog">Blog</a></li>
+    <li><a href="contact.html" data-title="Contact">Contact</a></li>
+  </ul>
+  <footer class="footer">
+    <p>© 2022 Florin Bizgan. </p>
+    <p>All rights reserved. </p>
+  </footer>
 </body>
+
 </html>
