missed main page redirect

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <body>
   <ul>
-    <li><a href="#" data-title="home">Home</a></li>
-    <li><a href="#" data-title="About">About</a></li>
-    <li><a href="#" data-title="Blog">Blog</a></li>
-    <li><a href="#" data-title="Contact">Contact</a></li>
+    <li><a href="index.html" data-title="home">Home</a></li>
+    <li><a href="about.html" data-title="About">About</a></li>
+    <li><a href="blog.html" data-title="Blog">Blog</a></li>
+    <li><a href="contact.html" data-title="Contact">Contact</a></li>
   </ul>
   <img src="market_cycle.png" alt="">
   <h1>Required Market Cap for your coin to reach your desired price.</h1>
@@ -26,17 +26,17 @@
     <input type="number" id="marketCap" placeholder="Current Market Cap">
     <div class="sub buttons">
       <input type="button" id="sub" value="Submit" onclick="marketCalc()">
-    <input type="reset" onclick="handler" ...>
+      <input type="reset" onclick="handler" ...>
     </div>
     <div>
       <p class="final text_market">Required Market Cap: </p>
       <p id="finalMarket" class="final final_result"> </p><!-- result will be here -->
     </div>
   </form>
-<footer class="footer">
-  <p>© 2022 Florin Bizgan. </p>
-  <p>All rights reserved. </p>
-</footer>
+  <footer class="footer">
+    <p>© 2022 Florin Bizgan. </p>
+    <p>All rights reserved. </p>
+  </footer>
 
 </body>
 
