--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
 <body>
   <ul>
-    <li><a href="#" data-title="home">Home</a></li>
+    <li><a href="index.html" data-title="home">Home</a></li>
     <li><a href="about.html" data-title="About">About</a></li>
     <li><a href="blog.html" data-title="Blog">Blog</a></li>
     <li><a href="contact.html" data-title="Contact">Contact</a></li>
