added support for rest of site pages

--- a/index.html
+++ b/index.html
@@ -26,17 +26,18 @@
     <input type="number" id="marketCap" placeholder="Current Market Cap">
     <div class="sub buttons">
       <input type="button" id="sub" value="Submit" onclick="marketCalc()">
-      <input type="reset" onclick="handler" ...>
+    <input type="reset" onclick="handler" ...>
     </div>
     <div>
       <p class="final text_market">Required Market Cap: </p>
       <p id="finalMarket" class="final final_result"> </p><!-- result will be here -->
     </div>
   </form>
-  <footer class="footer">
-    <p>© 2022 Florin Bizgan. </p>
-    <p>All rights reserved. </p>
-  </footer>
+  <h2>Info about this tool to be written here</h2>
+<footer class="footer">
+  <p>© 2022 Florin Bizgan. </p>
+  <p>All rights reserved. </p>
+</footer>
 
 </body>
 
