--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="style-about.css">
   <title>About</title>
 </head>
+
 <body>
   <ul>
     <li><a href="index.html" data-title="home">Home</a></li>
@@ -15,7 +16,7 @@
     <li><a href="blog.html" data-title="Blog">Blog</a></li>
     <li><a href="contact.html" data-title="Contact">Contact</a></li>
   </ul>
-  <h1>Info about Market Cap tool to be written here in detail.</h1>
+  <h1 class="info-tab">Info about Market Cap tool to be written here in detail.</h1>
 
   <footer class="footer">
     <p>© 2022 Florin Bizgan. </p>
