--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="design.css">
+  <link rel="stylesheet" href="style-contact.css">
   <title>Contact</title>
 </head>
 
@@ -16,6 +16,7 @@
     <li><a href="blog.html" data-title="Blog">Blog</a></li>
     <li><a href="contact.html" data-title="Contact">Contact</a></li>
   </ul>
+  <h1 class="contact">Contact details to be written here</h1>
   <footer class="footer">
     <p>© 2022 Florin Bizgan. </p>
     <p>All rights reserved. </p>
