--- a/index.html
+++ b/index.html
@@ -34,10 +34,19 @@
     </div>
   </form>
   <h2>Info about this tool to be written here</h2>
-<footer class="footer">
-  <p>© 2022 Florin Bizgan. </p>
-  <p>All rights reserved. </p>
-</footer>
+  <footer class="footer">
+    <p>© 2022 Florin Bizgan. </p>
+    <p>All rights reserved. </p>
+    <p class="donations">
+        <p>Do you appreciate my work? Tips welcome!</p>
+        <p style="margin-bottom:5px;">BTC Address:
+        <span style="color:#ef8e19;">1MzfQp8sAguq4Txwo3GgXka1cmngWg4ogw (Bitcoin)</span></p>
+        <p style="margin-bottom:5px;">ETH Address:
+        <span style="color:#ef8e19;">0x360dae91dc50d630251c6480c8f3f76e7c054330 (Ethereum - ERC20)</span></p>
+        <p style="margin-bottom:5px;">USDT Address:
+        <span style="color:#ef8e19;">TZ3q9QjZHU538npoUzVMVDMniApLV781dU (Tron - TRC20)</span></p>
+    </p>
+  </footer>
 
 </body>
 
