added info about tool

--- a/about.html
+++ b/about.html
@@ -15,7 +15,17 @@
     <li><a href="blog.html" data-title="Blog">Blog</a></li>
     <li><a href="contact.html" data-title="Contact">Contact</a></li>
   </ul>
-  <h1 class="info-tab">Info about Market Cap tool to be written here in detail.</h1>
+  <h1 class="info-tab">Required Market Cap tool</h1>
+  <p class="text-a">
+  <br>  With this tool you can discover the necessary market capitalization of the desired project to reach the price you want. 
+  As an example lets take <strong class="cardano">Cardano</strong> and see what would be the required market cap in order to reach <em class="price_color">$25</em>.
+  At the moment I am writting this <strong class="cardano">Cardano</strong> price is <em class="price_color">$0.4942</em> and its market cap is <em class="price_color">$16,892,112,294</em>
+  For a <em class="price_color">$25</em> price, Cardano will need a market cap of <strong class="price_color">$854,518,023,776</strong> wich is Bitcoin x2 current market cap.
+  This tool was created so it can give roughly an idea of how much growth a certain projects needs so it can reach certain price.
+  In the above example we can see that <strong class="cardano">Cardano</strong> would require a <strong class="price_color">854 Billions</strong> market cap for a <em class="price_color">$25</em> price.
+  Realistically this would not happen anytime soon 
+  </p>
+  <br>
 
   <footer class="footer">
     <p>© 2022 Florin Bizgan. </p>
