--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <li><a href="contact.html" data-title="Contact">Contact</a></li>
   </ul>
   <h1 class="info-tab">Required Market Cap tool</h1>
-  <p class="text-a">
+  <p class="cap text-a">
   <br>  With this tool you can discover the necessary market capitalization of the desired project to reach the price you want. 
   As an example lets take <strong class="cardano">Cardano</strong> and see what would be the required market cap in order to reach <em class="price_color">$25</em>.
   At the moment I am writting this <strong class="cardano">Cardano</strong> price is <em class="price_color">$0.4942</em> and its market cap is <em class="price_color">$16,892,112,294</em>
@@ -26,7 +26,13 @@
   Realistically this would not happen anytime soon 
   </p>
   <br>
-
+  <br>
+  <h2>What Is Crypto Market Capitalization?</h2>
+  <p class="cap text-b">
+    Market capitalization is a metric used to understand the current market value of an asset. In the context of cryptocurrencies, crypto market capitalization refers to the present value of the cryptocurrency network. You can calculate the market capitalization of an individual cryptocurrency as well as the industry as a whole.
+    In both cases, a popular short-form, market cap, is used to denote the metrics. Many experts say that crypto market capitalization allows them to understand the development and performance of a crypto asset from a broader perspective.   
+    Market capitalization is not a concept exclusive to the crypto sector. You can find its use in traditional stock markets as well. Nevertheless, you can spot many differences between these two calculations.
+  </p>
   <footer class="footer">
     <p>© 2022 Florin Bizgan. </p>
     <p>All rights reserved. </p>
