more info added

--- a/about.html
+++ b/about.html
@@ -33,6 +33,14 @@
     In both cases, a popular short-form, market cap, is used to denote the metrics. Many experts say that crypto market capitalization allows them to understand the development and performance of a crypto asset from a broader perspective.   
     Market capitalization is not a concept exclusive to the crypto sector. You can find its use in traditional stock markets as well. Nevertheless, you can spot many differences between these two calculations.
   </p>
+  <br>
+  <br>
+  <h2>How to Calculate Individual Crypto Market Cap?</h2>
+  <p class="cap text-c">
+    Individual crypto market cap refers to the market capitalization of a particular cryptocurrency or blockchain project. 
+    First, there is Bitcoin (BTC), the most popular cryptocurrency coin globally. At the time of writing, the crypto market cap of Bitcoin is $406,661,812,251.
+    Taking second place is Ethereum (ETH), which has a market capitalization of $210,316,964,058. While it is not as big as Bitcoin, the Ethereum project is one of the most critical projects in the crypto sector.
+  </p>
   <footer class="footer">
     <p>© 2022 Florin Bizgan. </p>
     <p>All rights reserved. </p>
