--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
     <li><a href="blog.html" data-title="Blog">Blog</a></li>
     <li><a href="contact.html" data-title="Contact">Contact</a></li>
   </ul>
+  <img class="market-logo" src="market.png" alt="">
   <h1 class="info-tab">Required Market Cap tool</h1>
   <p class="cap text-a">
   <br>  With this tool you can discover the necessary market capitalization of the desired project to reach the price you want. 
@@ -38,8 +39,24 @@
   <h2>How to Calculate Individual Crypto Market Cap?</h2>
   <p class="cap text-c">
     Individual crypto market cap refers to the market capitalization of a particular cryptocurrency or blockchain project. 
-    First, there is Bitcoin (BTC), the most popular cryptocurrency coin globally. At the time of writing, the crypto market cap of Bitcoin is $406,661,812,251.
-    Taking second place is Ethereum (ETH), which has a market capitalization of $210,316,964,058. While it is not as big as Bitcoin, the Ethereum project is one of the most critical projects in the crypto sector.
+    First, there is Bitcoin (BTC), the most popular cryptocurrency coin globally. At the time of writing, the crypto market cap of Bitcoin is <em class="price_color">$406,661,812,251.</em>
+    Taking second place is Ethereum (ETH), which has a market capitalization of <em class="price_color">$210,316,964,058</em>. While it is not as big as Bitcoin, the Ethereum project is one of the most critical projects in the crypto sector.
+  </p>
+  <br>
+  <br>
+  <h2>How to calculate the market cap of any cryptocurrency?</h2>
+  <p class="cap text-d">
+    Crypto market capitalization = supply of crypto assets in circulation x the value of an individual unit.
+    Lets try to calculate the market cap of Litecoin, a popular alternative to Bitcoin. At the time of writing, one Litecoin costs <em class="price_color">$60</em>. It is believed that there are <em class="price_color">71,133,343</em> Litecoins currently in circulation. Therefore, the market cap of Litecoin would be the cost of a single Litecoin multiplied by the total number of Litecoins in circulation.
+    When multiplying these numbers, we get the total figure of Litecoin market cap: <em class="price_color">$4,268,000,580.</em>
+    This number is equal to the total market value of the cryptocurrency network. When the market cap of one cryptocurrency goes higher, we can understand the network is on the path to success. For instance, during the past 4 years, the market cap of Bitcoin saw a rise from $68+ billion to $1+ trillion.
+  </p>
+  <br>
+  <br>
+  <h2>The Bottom Line</h2>
+  <p class="cap text-e">
+    While the crypto market cap is indeed an important figure, it is not enough to make the right investment decisions. You should combine this data with other insights and metrics to analyze where the crypto market is going.
+    Nevertheless, if other metrics say that an asset is worth investing in, an increasing market cap is a sufficient signal to back up your decision.
   </p>
   <footer class="footer">
     <p>© 2022 Florin Bizgan. </p>
