few fixes to make website mobile frendly

--- a/about.html
+++ b/about.html
@@ -101,6 +101,9 @@
     Nevertheless, if other metrics say that an asset is worth investing in, an increasing market cap is a sufficient
     signal to back up your decision.
   </p>
+  <br>
+  <br>
+  <h1 class="warning">THIS IS NOT A FINANCIAL ADVICE</h1>
   <footer class="footer">
     <p>© 2022 Florin Bizgan. </p>
     <p>All rights reserved. </p>
