--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="design.css">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      }
+    .imgbox {
+      display: grid;
+      height: 100%;
+      }
+    .center-fit {
+      max-width: 100%;
+      max-height: 100vh;
+      margin: auto;
+
+      }
+  </style>
   <title>Market Cap Calculator</title>
 </head>
 
@@ -33,7 +49,12 @@
       <p id="finalMarket" class="final final_result"> </p><!-- result will be here -->
     </div>
   </form>
-  <h2>Info about this tool to be written here</h2>
+  <p>This tool was created so it can give roughly an idea of how much growth a certain projects needs so it can reach
+    certain price.</p>
+    <br><br><br><br><br>
+  <h1 class="warning">THIS IS NOT A FINANCIAL ADVICE</h1>
+  <br><br><br><br><br>
+  
   <footer class="footer">
     <p>© 2022 Florin Bizgan. </p>
     <p>All rights reserved. </p>
