--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style-contact.css">
+  <script src="script.js"></script>
   <title>Contact</title>
 </head>
 
@@ -17,21 +18,36 @@
     <li><a href="contact.html" data-title="Contact">Contact</a></li>
   </ul>
   <h1 class="contact">Contact details to be written here</h1>
+  <div class="page-transition">
+    <div class="div"></div>
+    <div class="div"></div>
+    <div class="div"></div>
+    <div class="div"></div>
+
+    <ul class="preload">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </div>
   <footer class="footer">
     <p>© 2022 Florin Bizgan. </p>
     <p>All rights reserved. </p>
     <p class="donations">
-        <p>Do you appreciate my work? Tips welcome!</p>
-        <p style="margin-bottom:5px;">BTC Address:
-        <span style="color:#ef8e19;">1MzfQp8sAguq4Txwo3GgXka1cmngWg4ogw (Bitcoin)</span></p>
-        <p style="margin-bottom:5px;">ETH Address:
-        <span style="color:#ef8e19;">0x360dae91dc50d630251c6480c8f3f76e7c054330 (Ethereum - ERC20)</span></p>
-        <p style="margin-bottom:5px;">USDT Address:
-        <span style="color:#ef8e19;">TZ3q9QjZHU538npoUzVMVDMniApLV781dU (Tron - TRC20)</span></p>
+    <p>Do you appreciate my work? Tips welcome!</p>
+    <p style="margin-bottom:5px;">BTC Address:
+      <span style="color:#ef8e19;">1MzfQp8sAguq4Txwo3GgXka1cmngWg4ogw (Bitcoin)</span>
+    </p>
+    <p style="margin-bottom:5px;">ETH Address:
+      <span style="color:#ef8e19;">0x360dae91dc50d630251c6480c8f3f76e7c054330 (Ethereum - ERC20)</span>
+    </p>
+    <p style="margin-bottom:5px;">USDT Address:
+      <span style="color:#ef8e19;">TZ3q9QjZHU538npoUzVMVDMniApLV781dU (Tron - TRC20)</span>
+    </p>
     </p>
   </footer>
 </body>
 
 </html>
-
-
