--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     </div>
     <div>
       <p class="final text_market">Required Market Cap: </p>
+      <p id="newPrice"></p>
+      <!-- <script src="script.js"></script> -->
       <p id="finalMarket" class="final final_result"> </p><!-- result will be here -->
     </div>
   </form>
@@ -54,6 +56,7 @@
     <br><br><br><br><br>
   <h1 class="warning">THIS IS NOT A FINANCIAL ADVICE</h1>
   <br><br><br><br><br>
+  
   
   <footer class="footer">
     <p>© 2022 Florin Bizgan. </p>
@@ -67,6 +70,10 @@
         <p style="margin-bottom:5px;">USDT Address:
         <span style="color:#ef8e19;">TZ3q9QjZHU538npoUzVMVDMniApLV781dU (Tron - TRC20)</span></p>
     </p>
+    <center>
+      <p id="currentTime"></p>
+      <script src="script.js"></script>
+    </center>
   </footer>
 
 </body>
