--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,23 @@
     <li><a href="blog.html" data-title="Blog">Blog</a></li>
     <li><a href="contact.html" data-title="Contact">Contact</a></li>
   </ul>
+  <div class="container">
+    <form action="action_page.php">
+
+      <label for="fname">First Name</label>
+      <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+      <label for="lname">Last Name</label>
+      <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+      </select>
+
+      <label for="subject">Subject</label>
+      <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+      <input type="submit" value="Submit">
+
+    </form>
+  </div>
   <h1 class="contact">Contact details to be written here</h1>
   <footer class="footer">
     <p>© 2022 Florin Bizgan. </p>
