--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style-index.css">
-  <!-- <style>
+  <style>
     * {
       margin: 0;
       padding: 0;
@@ -21,7 +21,7 @@
       margin: auto;
 
       }
-  </style> -->
+  </style>
   <title>Market Cap Calculator</title>
 </head>
 
@@ -56,20 +56,6 @@
   <br><br><br><br><br>
   <h1 class="warning">THIS IS NOT A FINANCIAL ADVICE</h1>
   <br><br><br><br><br>
-
-  <script type="text/javascript">
-    var today = new Date();
-    var day = today.getDay();
-    var daylist = ["Sunday", "Monday", "Tuesday", "Wednesday ", "Thursday", "Friday", "Saturday"];
-    var date = today.getFullYear() + '-' + (today.getMonth() + 1) + '-' + today.getDate();
-    var time = today.getHours() + ":" + today.getMinutes() + ":" + today.getSeconds();
-    var dateTime = date + ' ' + time;
-
-    document.getElementById("displayDateTime").innerHTML = dateTime + ' <br> Day :- ' + daylist[day];
-
-  </script>
-  <br><br><br><br><br>
-
   <footer class="footer">
     <p>© 2022 Florin Bizgan. </p>
     <p>All rights reserved. </p>
@@ -83,12 +69,6 @@
     </p>
     <p style="margin-bottom:5px;">USDT Address:
       <span style="color:#ef8e19;">TZ3q9QjZHU538npoUzVMVDMniApLV781dU (Tron - TRC20)</span>
-    </p>
-    </p>
-    <center>
-      <p id="currentTime"></p>
-      <script src="script.js"></script>
-    </center>
   </footer>
 
 </body>
