--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="style-blog.css">
   <title>Blog</title>
 </head>
-
 <body>
   <ul>
     <li><a href="index.html" data-title="home">Home</a></li>
@@ -16,19 +15,11 @@
     <li><a href="blog.html" data-title="Blog">Blog</a></li>
     <li><a href="contact.html" data-title="Contact">Contact</a></li>
   </ul>
-  <h1 class="blog">Blog details to be left here</h1>
+  <!-- <h1 class="blog">Blog details to be left here</h1> -->
+  <img class="coming-soon" src="coming-soon.png" alt="">
   <footer class="footer">
     <p>© 2022 Florin Bizgan. </p>
     <p>All rights reserved. </p>
-    <p class="donations">
-        <p>Do you appreciate my work? Tips welcome!</p>
-        <p style="margin-bottom:5px;">BTC Address:
-        <span style="color:#ef8e19;">1MzfQp8sAguq4Txwo3GgXka1cmngWg4ogw (Bitcoin)</span></p>
-        <p style="margin-bottom:5px;">ETH Address:
-        <span style="color:#ef8e19;">0x360dae91dc50d630251c6480c8f3f76e7c054330 (Ethereum - ERC20)</span></p>
-        <p style="margin-bottom:5px;">USDT Address:
-        <span style="color:#ef8e19;">TZ3q9QjZHU538npoUzVMVDMniApLV781dU (Tron - TRC20)</span></p>
-    </p>
   </footer>
 </body>
 
