--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     <li><a href="contact.html" data-title="Contact">Contact</a></li>
   </ul>
   <img src="market_cycle.png" alt="">
-  <h1>Required Market Cap for your coin to reach your desired price.</h1>
+  <h1>Required Market Cap to reach your desired price.</h1>
   <script type="text/javascript" src="script.js">
   </script>
   <form class="form_tab" action="">
-    <input type="number" id="currentPrice" placeholder="Current Price">
-    <input type="number" id="newPrice" placeholder="New Price">
+    <input style="margin-bottom:5px;" type="number" id="currentPrice" placeholder="Current Price">
+    <input style="margin-bottom:5px;" type="number" id="newPrice" placeholder="New Price">
     <input type="number" id="marketCap" placeholder="Current Market Cap">
     <div class="sub buttons">
       <input type="button" id="sub" value="Submit" onclick="marketCalc()">
@@ -59,16 +59,6 @@
   <footer class="footer">
     <p>© 2022 Florin Bizgan. </p>
     <p>All rights reserved. </p>
-    <p class="donations">
-    <p>Do you appreciate my work? Tips welcome!</p>
-    <p style="margin-bottom:5px;">BTC Address:
-      <span style="color:#ef8e19;">1MzfQp8sAguq4Txwo3GgXka1cmngWg4ogw (Bitcoin)</span>
-    </p>
-    <p style="margin-bottom:5px;">ETH Address:
-      <span style="color:#ef8e19;">0x360dae91dc50d630251c6480c8f3f76e7c054330 (Ethereum - ERC20)</span>
-    </p>
-    <p style="margin-bottom:5px;">USDT Address:
-      <span style="color:#ef8e19;">TZ3q9QjZHU538npoUzVMVDMniApLV781dU (Tron - TRC20)</span>
   </footer>
 
 </body>
