--- a/index.html
+++ b/index.html
@@ -34,8 +34,6 @@
   </ul>
   <img src="market_cycle.png" alt="">
   <h1>Required Market Cap to reach your desired price.</h1>
-  <script type="text/javascript" src="script.js">
-  </script>
   <form class="form_tab" action="">
     <input style="margin-bottom:5px;" type="number" id="currentPrice" placeholder="Current Price">
     <input style="margin-bottom:5px;" type="number" id="newPrice" placeholder="New Price">
@@ -47,7 +45,6 @@
     <div>
       <p class="final text_market">Required Market Cap: </p>
       <p id="newPrice"></p>
-      <!-- <script src="script.js"></script> -->
       <p id="finalMarket" class="final final_result"> </p><!-- result will be here -->
     </div>
   </form>
@@ -60,6 +57,7 @@
     <p>© 2022 Florin Bizgan. </p>
     <p>All rights reserved. </p>
   </footer>
+  <script type="text/javascript" src="script.js"></script>
 
 </body>
 
