--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
   <script src="script.js"></script>
   <title>Contact</title>
 </head>
+
 <body>
   <ul>
     <li><a href="index.html" data-title="home">Home</a></li>
@@ -17,24 +18,14 @@
     <li><a href="contact.html" data-title="Contact">Contact</a></li>
   </ul>
   <br><br><br><br><br>
-<form action="https://formsubmit.co/e458e40e4727443618d58737a1c9d47e" method="POST">  
-  <input name="name" type="text" class="feedback-input" placeholder="Name" />   
-  <input name="email" type="text" class="feedback-input" placeholder="Email" />
-  <textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
-  <input type="submit" value="SUBMIT"/>
-</form>
-<br><br><br><br><br><br><br><br><br><br>
-<p class="donations">
-  <p>Do you appreciate my work? Tips welcome!</p>
-  <p style="margin-bottom:5px;">BTC Address:
-    <span style="color:#ef8e19;">1MzfQp8sAguq4Txwo3GgXka1cmngWg4ogw (Bitcoin)</span>
-  </p>
-  <p style="margin-bottom:5px;">ETH Address:
-    <span style="color:#ef8e19;">0x360dae91dc50d630251c6480c8f3f76e7c054330 (Ethereum - ERC20)</span>
-  </p>
-  <p style="margin-bottom:5px;">USDT Address:
-    <span style="color:#ef8e19;">TZ3q9QjZHU538npoUzVMVDMniApLV781dU (Tron - TRC20)</span>
-  <footer class="footer">
+  <form action="https://formsubmit.co/e458e40e4727443618d58737a1c9d47e" method="POST">
+    <input name="name" type="text" class="feedback-input" placeholder="Name" />
+    <input name="email" type="text" class="feedback-input" placeholder="Email" />
+    <textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
+    <input type="submit" value="SUBMIT" />
+  </form>
+  <br><br><br><br><br><br><br><br><br><br>
+  <footer>
     <p>© 2022 Florin Bizgan. </p>
     <p>All rights reserved. </p>
   </footer>
