--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
     * {
       margin: 0;
       padding: 0;
-      }
+    }
+
     .imgbox {
       display: grid;
       height: 100%;
-      }
+    }
+
     .center-fit {
       max-width: 100%;
       max-height: 100vh;
       margin: auto;
 
-      }
+    }
   </style>
-  <title>Market Cap Calculator</title>
+  <title>Market Cap Calculator, check your coin market cap</title>
 </head>
 
 <body>
