feat: project structure changed

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style-about.css">
+  <link rel="stylesheet" href="/style/style-about.css">
   <title>About</title>
 </head>
 
@@ -16,7 +16,7 @@
     <li><a href="blog.html" data-title="Blog">Blog</a></li>
     <li><a href="contact.html" data-title="Contact">Contact</a></li>
   </ul>
-  <img class="market-logo" src="market.png" alt="">
+  <img class="market-logo" src="data/market.png" alt="">
   <h1 class="info-tab">Required Market Cap tool</h1>
   <p class="cap text-a">
     <br> With this tool you can discover the necessary market capitalization of the desired project to reach the price
