--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style-blog.css">
+  <link rel="stylesheet" href="style/style-blog.css">
   <title>Blog</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
     <li><a href="contact.html" data-title="Contact">Contact</a></li>
   </ul>
   <!-- <h1 class="blog">Blog details to be left here</h1> -->
-  <img class="coming-soon" src="coming-soon.png" alt="">
+  <img class="coming-soon" src="data/coming-soon.png" alt="">
   <footer class="footer">
     <p>© 2022 Florin Bizgan. </p>
     <p>All rights reserved. </p>
