--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style-index.css">
+  <link rel="stylesheet" href="style/style-index.css">
   <style>
     * {
       margin: 0;
@@ -34,7 +34,7 @@
     <li><a href="blog.html" data-title="Blog">Blog</a></li>
     <li><a href="contact.html" data-title="Contact">Contact</a></li>
   </ul>
-  <img src="market_cycle.png" alt="">
+  <img src="data/market_cycle.png" alt="">
   <h1>Required Market Cap to reach your desired price.</h1>
   <form class="form_tab" action="">
     <input style="margin-bottom:5px;" type="number" id="currentPrice" placeholder="Current Price">
@@ -59,7 +59,7 @@
     <p>© 2022 Florin Bizgan. </p>
     <p>All rights reserved. </p>
   </footer>
-  <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="core/script.js"></script>
 </body>
 
 </html>
