Feat: fixed main form box

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
     <form class="form_tab" action="">
       <div class="buttons">
         <p class="info-text">Insert the current price bellow</p>
-        <input class="buton" style="margin-bottom:5px;" type="number" id="currentPrice" placeholder=" Current Price">
+        <input class="buton" style="margin-bottom:5px;" type="number" id="currentPrice" placeholder="Current Price">
         <p class="info-text">Insert your desired price bellow</p>
-        <input class="buton" style="margin-bottom:5px;" type="number" id="newPrice" placeholder=" New Price">
+        <input class="buton" style="margin-bottom:5px;" type="number" id="newPrice" placeholder="New Price">
         <p class="info-text">Insert bellow current project Market Cap </p>
-        <input class="buton" type="number" id="marketCap" placeholder=" Current Market Cap">
+        <input class="buton" type="number" id="marketCap" placeholder="Current Market Cap">
         <div class="sub buttons">
           <input class="buton low" type="button" id="sub" value="Submit" onclick="marketCalc()">
           <input class="buton low" type="reset" onclick="handler" ...>
@@ -57,14 +57,12 @@
     <p>This tool was created so it can give roughly an idea of how much growth a certain projects needs so it can reach
       certain price.</p>
   </div>
-  <br><br><br><br><br>
   <h1 class="warning">THIS IS NOT A FINANCIAL ADVICE</h1>
-  <br><br><br><br><br>
   <footer class="footer">
     <p>© 2022 Florin Bizgan. </p>
     <p>All rights reserved. </p>
   </footer>
-  <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="core/script.js"></script>
 
 </body>
 
