About page visual improv

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
   </p>
   <br>
   <br>
-  <h2>What Is Crypto Market Capitalization?</h2>
+  <h2 class="title-text">What Is Crypto Market Capitalization?</h2>
   <p class="cap text-b">
     Market capitalization is a metric used to understand the current market value of an asset. In the context of
     cryptocurrencies, crypto market capitalization refers to the present value of the cryptocurrency network. You can
@@ -67,7 +67,7 @@
   </p>
   <br>
   <br>
-  <h2>How to Calculate Individual Crypto Market Cap?</h2>
+  <h2 class="title-text">How to Calculate Individual Crypto Market Cap?</h2>
   <p class="cap text-c">
     Individual crypto market cap refers to the market capitalization of a particular cryptocurrency or blockchain
     project.
@@ -79,7 +79,7 @@
   </p>
   <br>
   <br>
-  <h2>How to calculate the market cap of any cryptocurrency?</h2>
+  <h2 class="title-text">How to calculate the market cap of any cryptocurrency?</h2>
   <p class="cap text-d">
     Crypto market capitalization = supply of crypto assets in circulation x the value of an individual unit.
     Lets try to calculate the market cap of Litecoin, a popular alternative to Bitcoin. At the time of writing, one
@@ -94,7 +94,7 @@
   </p>
   <br>
   <br>
-  <h2>The Bottom Line</h2>
+  <h2 class="title-text">The Bottom Line</h2>
   <p class="cap text-e">
     While the crypto market cap is indeed an important figure, it is not enough to make the right investment decisions.
     You should combine this data with other insights and metrics to analyze where the crypto market is going.
