--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
     </form>
     <p>This tool was created so it can give roughly an idea of how much growth a certain projects needs so it can reach
       certain price.</p>
+    <p>This is not a financial advice, this tool is purely designed to give an idea/estimate.</p>
+    <p>This page will be updated with more info or tools.</p>
   </div>
   <h1 class="warning">THIS IS NOT A FINANCIAL ADVICE</h1>
   <footer class="footer">
